crates/mermaid-text/tests/snapshots/snapshots__pie_with_title.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
                                   Pet Counts

Dogs  ████████████████████████████████████████████████████░░░░░░░░░░░░░░   79.4%
Cats  ████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   17.5%
Rats  ██░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░    3.1%
