crates/mermaid-text/tests/snapshots/snapshots__rect_alpha_opaque.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: opaque
---
 ┌──────┐     ┌──────┐
 │  A   │     │  B   │
 └──────┘     └──────┘
     ┆            ┆
     ┆            ┆
 ▓▓▓▓┆▓msg▓▓▓▓▓▓▓▓┆▓▓▓▓
 ▓▓▓▓─────────────▸▓▓▓▓
 ▓▓▓▓┆▓▓▓▓▓▓▓▓▓▓▓▓┆▓▓▓▓
     ┆            ┆
     ┆            ┆
 ┌──────┐     ┌──────┐
 │  A   │     │  B   │
 └──────┘     └──────┘
