crates/mermaid-text/tests/snapshots/snapshots__rect_alpha_transparent.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: alpha
---
 ┌──────┐     ┌──────┐
 │  A   │     │  B   │
 └──────┘     └──────┘
     ┆            ┆
     ┆            ┆
 ░░░░┆░msg░░░░░░░░┆░░░░
 ░░░░─────────────▸░░░░
 ░░░░┆░░░░░░░░░░░░┆░░░░
     ┆            ┆
     ┆            ┆
 ┌──────┐     ┌──────┐
 │  A   │     │  B   │
 └──────┘     └──────┘
