crates/mermaid-text/tests/snapshots/snapshots__rect_nested_inside_loop.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐      ┌──────┐
 │  A   │      │  B   │
 └──────┘      └──────┘
     ┆             ┆
╔═[loop]══[daily]═══════╗
║░░░░┆░░░░░░░░░░░░░┆░░░░║
║░░░░┆░░░░░░░░░░░░░┆░░░░║
║▒▒▒▒┆▒tick▒▒▒▒▒▒▒▒┆▒▒▒▒║
║▒▒▒▒──────────────▸▒▒▒▒║
║▒▒▒▒┆▒▒▒▒▒▒▒▒▒▒▒▒▒┆▒▒▒▒║
║░░░░┆░░░░░░░░░░░░░┆░░░░║
║░░░░┆░░░░░░░░░░░░░┆░░░░║
╚═══════════════════════╝
     ┆             ┆
 ┌──────┐      ┌──────┐
 │  A   │      │  B   │
 └──────┘      └──────┘
