crates/mermaid-text/tests/snapshots/snapshots__rect_rgb_block_renders_as_borderless_fill.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐    ┌──────┐
 │  A   │    │  B   │
 └──────┘    └──────┘
     ┆           ┆
     ┆           ┆
 ▓▓▓▓┆▓hi▓▓▓▓▓▓▓▓┆▓▓▓▓
 ▓▓▓▓────────────▸▓▓▓▓
 ▓▓▓▓┆▓▓▓▓▓▓▓▓▓▓▓┆▓▓▓▓
     ┆           ┆
     ┆           ┆
 ┌──────┐    ┌──────┐
 │  A   │    │  B   │
 └──────┘    └──────┘
