crates/mermaid-text/tests/snapshots/snapshots__sequence_note_auto_wrap_long_text.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌────────┐             ┌───────┐
 │  User  │             │  API  │
 └────────┘             └───────┘
      ┆ POST /login         ┆
      ──────────────────────▸
      ┆                     ┆
╭─────────────────────────────────────╮
│ This is a long note that spans both │
│ participants and should wrap nicely │
╰─────────────────────────────────────╯
      ┆ 200 OK              ┆
      ◂──────────────────────
      ┆                     ┆
 ┌────────┐             ┌───────┐
 │  User  │             │  API  │
 └────────┘             └───────┘
