crates/mermaid-text/tests/snapshots/snapshots__sequence_note_canvas_widens_for_long_word.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐          ┌──────┐
 │  A   │          │  B   │
 └──────┘          └──────┘
     ┆ request         ┆
     ──────────────────▸
     ┆                 ┆
     ┆                 ┆ ╭──────────────────────────────╮
     ┆                 ┆ │ antidisestablishmentarianism │
     ┆                 ┆ ╰──────────────────────────────╯
     ┆ response        ┆
     ◂──────────────────
     ┆                 ┆
 ┌──────┐          ┌──────┐
 │  A   │          │  B   │
 └──────┘          └──────┘
