crates/mermaid-text/tests/snapshots/snapshots__sequence_note_left_of_wraps.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐       ┌──────┐
 │  A   │       │  B   │
 └──────┘       └──────┘
     ┆ call         ┆
     ───────────────▸
     ┆              ┆
  ╭───────────────╮ ┆
  │ this is a     │ ┆
  │ somewhat long │ ┆
  │ note anchored │ ┆
  │ left of B     │ ┆
  ╰───────────────╯ ┆
     ┆ reply        ┆
     ◂───────────────
     ┆              ┆
 ┌──────┐       ┌──────┐
 │  A   │       │  B   │
 └──────┘       └──────┘
