crates/mermaid-text/tests/snapshots/snapshots__sequence_note_respects_explicit_br.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐    ┌──────┐
 │  A   │    │  B   │
 └──────┘    └──────┘
     ┆ go        ┆
     ────────────▸
     ┆           ┆
    ╭─────────────╮
    │ first line  │
    │ second line │
    │ third line  │
    ╰─────────────╯
     ┆           ┆
 ┌──────┐    ┌──────┐
 │  A   │    │  B   │
 └──────┘    └──────┘
