crates/mermaid-text/tests/snapshots/snapshots__sequence_with_explicit_activation.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌────────┐             ┌───────┐
 │  User  │             │  API  │
 └────────┘             └───────┘
      ┆ POST /login         ┆
      ──────────────────────▸
      ┆ 200 OK              ┃
      ◂──────────────────────
      ┆                     ┆
